--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-rate-limit": "^8.0.1",
-    "express-session": "^1.18.1"
+    "express-session": "^1.18.1",
+    "node-fetch": "^3.3.2"
   }
 }
